Terminata fase di ricerca pazienti di un medico. Impostata nuova Activity per la ricerca e visualizzazione della CC del paziente selezionato.(Da implementare) Setting corretto per il "up button" della action bar.